fix spacing

--- a/s.css
+++ b/s.css
@@ -85,8 +85,7 @@ img {
 }
 
 .more {
-	margin-top: -2em;
-	margin-bottom: -1em;
+	margin-top: -0em;
 }
 
 .right a:link {
